--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.8.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-nuxt": "^1.0.0"
   }
 }
