--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
+    "genius-lyrics-api": "^3.0.3",
     "nuxt": "^2.14.5",
     "nuxt-buefy": "^0.4.3"
   },
