--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "genius-lyrics": "^4.0.0",
     "genius-lyrics-api": "^3.0.3",
     "nuxt": "^2.14.5",
     "nuxt-buefy": "^0.4.3"
